--- a/app/src/main/res/layout/fragment_view_group.xml
+++ b/app/src/main/res/layout/fragment_view_group.xml
@@ -35,4 +35,14 @@
         app:layout_anchorGravity="bottom"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:backgroundTint="?colorAccent"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_arrow_back_white" />
+
 </android.support.design.widget.CoordinatorLayout>
