--- a/app/src/main/res/layout/fragment_view_group.xml
+++ b/app/src/main/res/layout/fragment_view_group.xml
@@ -41,7 +41,7 @@
             <ImageView
                 android:layout_width="72dp"
                 android:layout_height="72dp"
-                app:srcCompat="@drawable/ic_empty_tasks" />
+                app:srcCompat="@drawable/ic_empty_wishlist" />
 
             <TextView
                 android:layout_width="wrap_content"
