--- a/app/src/main/res/drawable/ic_checked.xml
+++ b/app/src/main/res/drawable/ic_checked.xml
@@ -1,5 +1,4 @@
-<vector android:height="24dp" android:viewportHeight="64"
-    android:viewportWidth="64" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="m46.025,18.086l-21.914,24.221 -6.91,-7.637c-0.74,-0.82 -2.006,-0.881 -2.824,-0.142 -0.818,0.741 -0.883,2.006 -0.141,2.825l8.048,8.894c0.368,0.536 0.979,0.85 1.627,0.85 0.073,0 0.146,-0.03 0.22,-0.039 0.051,0.004 0.1,0.032 0.15,0.032 0.592,0 1.166,-0.266 1.555,-0.725l23.154,-25.595c0.742,-0.82 0.678,-2.085 -0.141,-2.826 -0.818,-0.741 -2.083,-0.68 -2.824,0.142z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M31.998,0C14.354,0 0,14.355 0,32s14.354,32 31.998,32C49.645,64 64,49.645 64,32S49.645,0 31.998,0zM31.998,60C16.561,60 4,47.439 4,32S16.561,4 31.998,4C47.438,4 60,16.561 60,32S47.438,60 31.998,60z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M504.527,67.909c-8.611,-6.92 -21.2,-5.547 -28.118,3.063L210.291,402.169c-3.612,3.863 -8.494,6.101 -13.797,6.314c-5.459,0.22 -10.629,-1.73 -14.523,-5.431L33.839,261.061c-7.975,-7.643 -20.634,-7.374 -28.278,0.599c-7.643,7.974 -7.375,20.634 0.599,28.278l148.191,142.048c11.26,10.703 25.83,16.515 41.268,16.515c0.825,0 1.655,-0.017 2.484,-0.051c16.352,-0.657 31.371,-7.734 42.288,-19.926c0.237,-0.265 0.467,-0.537 0.691,-0.814L507.59,96.027C514.508,87.416 513.137,74.828 504.527,67.909z"/>
 </vector>
