--- a/app/src/main/res/drawable/ic_folder_white.xml
+++ b/app/src/main/res/drawable/ic_folder_white.xml
@@ -1,4 +1,6 @@
-<vector android:height="24dp" android:viewportHeight="60"
-    android:viewportWidth="60" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M56.98,11.5H28.02V6.52c0,-1.665 -1.354,-3.02 -3.02,-3.02H3.02C1.354,3.5 0,4.854 0,6.52V20.5v2v30.98c0,1.665 1.354,3.02 3.02,3.02H56.98c1.665,0 3.02,-1.354 3.02,-3.02V22.5v-2v-5.98C60,12.854 58.646,11.5 56.98,11.5zM58,53.48c0,0.563 -0.457,1.02 -1.02,1.02H3.02C2.457,54.5 2,54.043 2,53.48V22.5h56V53.48zM2,20.5V6.52C2,5.957 2.457,5.5 3.02,5.5H25c0.562,0 1.02,0.457 1.02,1.02v6.98H56.98c0.563,0 1.02,0.457 1.02,1.02v5.98H2z"/>
+<vector android:height="24dp" android:viewportHeight="512.001"
+    android:viewportWidth="512.001" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M0.001,410.537C-0.001,410.421 0.001,410.654 0.001,410.537L0.001,410.537z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M40.002,101.437c0,0.009 -0.001,0.018 -0.001,0.026C40.003,101.558 40.002,101.47 40.002,101.437z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M492.001,330.5c11.046,0 20,-8.954 20,-20v-167c0,-16.027 -6.241,-31.095 -17.574,-42.427c-11.332,-11.33 -26.396,-17.569 -42.416,-17.569H452L233.962,83.5c-8.183,-35.472 -40.024,-62.005 -77.941,-62.013l-76.02,-0.024c-44.112,0 -80,35.888 -80,80v309.074c0,44.112 35.888,80 80,80h352c44.112,0 80,-35.888 80,-80c0,-11.046 -8.954,-20 -20,-20c-11.046,0 -20,8.954 -20,20c0,22.056 -17.944,40 -40,40h-352c-22.056,0 -40,-17.944 -40,-39.999V101.463c0,-0.049 0,-0.043 0.001,-0.026c0.014,-22.044 17.952,-39.974 39.992,-39.974l76.016,0.024c22.051,0.005 39.991,17.948 39.991,40v2.013c0,11.046 8.954,20 20,20l236.003,0.004c5.341,-0.001 10.362,2.078 14.14,5.855c3.777,3.776 5.857,8.799 5.857,14.141v167C472.001,321.546 480.955,330.5 492.001,330.5z"/>
 </vector>
