--- a/app/src/main/res/drawable/ic_refresh_white.xml
+++ b/app/src/main/res/drawable/ic_refresh_white.xml
@@ -1,26 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportHeight="498.791"
-    android:viewportWidth="498.791">
-
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M63.785,180.391c-8-3.2-17.6,0-20.8,8c-3.2,8-6.4,16-9.6,25.6c-1.6,8,3.2,16,11.2,19.2c1.6,0,3.2,0,4.8,0 c6.4,0,12.8-4.8,14.4-9.6c1.6-8,4.8-16,8-22.4C74.985,193.191,71.785,183.591,63.785,180.391z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M63.785,321.191c-3.2-12.8-6.4-25.6-6.4-38.4c-1.6-8-9.6-14.4-17.6-14.4c-8,1.6-14.4,8-14.4,17.6c0,16,3.2,32,6.4,46.4 c3.2,6.4,9.6,11.2,16,11.2c1.6,0,3.2,0,4.8-3.2C60.585,338.791,65.385,329.191,63.785,321.191z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M132.585,426.791c-17.6-12.8-32-28.8-44.8-48c-4.8-8-14.4-9.6-22.4-4.8s-9.6,14.4-4.8,22.4c14.4,20.8,32,40,52.8,56 c3.2,1.6,6.4,3.2,9.6,3.2c4.8,0,9.6-1.6,12.8-6.4C140.585,442.791,138.985,431.591,132.585,426.791z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M327.785,468.391c-3.2-9.6-12.8-14.4-20.8-11.2c-36.8,11.2-76.8,11.2-113.6,0c-9.6-1.6-17.6,3.2-20.8,11.2 c-1.6,9.6,3.2,17.6,11.2,20.8c20.8,6.4,43.2,9.6,65.6,9.6c22.4,0,44.8-3.2,67.2-9.6 C326.185,485.991,330.985,477.991,327.785,468.391z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M457.385,189.991c-22.4-56-65.6-99.2-120-123.2c-36.8-16-76.8-20.8-116.8-16c-9.6,1.6-16,9.6-14.4,17.6 c1.6,9.6,9.6,16,17.6,14.4c35.2-4.8,68.8,1.6,100.8,14.4c46.4,20.8,83.2,57.6,102.4,105.6s19.2,100.8-1.6,147.2 c-12.8,28.8-32,56-57.6,75.2c-8,4.8-8,16-3.2,22.4c3.2,4.8,8,6.4,12.8,6.4c3.2,0,6.4,0,11.2-4.8c28.8-22.4,52.8-52.8,67.2-88 C478.185,306.791,479.785,245.991,457.385,189.991z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M287.785,5.991c-4.8-6.4-16-8-22.4-3.2l-59.2,44.8c-8,4.8-8,16-3.2,22.4l46.4,60.8c3.2,4.8,8,6.4,12.8,6.4 c3.2,0,6.4,0,8-1.6c8-4.8,8-16,3.2-22.4l-36.8-48l48-36.8C292.585,23.591,292.585,12.391,287.785,5.991z" />
+<vector android:height="24dp" android:viewportHeight="511.999"
+    android:viewportWidth="511.999" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M367.585,458.394c-5.307,-9.686 -17.462,-13.236 -27.149,-7.929c-25.712,14.088 -54.909,21.534 -84.436,21.534c-97.047,0 -176,-78.953 -176,-176.004c0,-11.046 -8.954,-19.998 -20,-19.998s-20,8.956 -20,20.002c0,57.696 22.468,111.938 63.265,152.735S198.304,511.999 256,511.999c36.226,0 72.07,-9.148 103.656,-26.455C369.343,480.236 372.893,468.081 367.585,458.394z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M408.735,143.264C367.938,102.467 313.696,79.999 256,79.999h-73.261l45.473,-45.928c7.771,-7.85 7.708,-20.513 -0.141,-28.284c-7.85,-7.771 -20.512,-7.708 -28.284,0.141l-51.4,51.915c-22.961,23.191 -23.094,61.058 -0.296,84.411l50.487,51.717c3.919,4.015 9.113,6.029 14.313,6.029c5.037,0 10.08,-1.892 13.97,-5.688c7.904,-7.716 8.056,-20.378 0.34,-28.282l-44.934,-46.031H256c97.047,0 176,78.953 176,176c0,30.425 -7.881,60.403 -22.792,86.691c-5.45,9.608 -2.079,21.814 7.529,27.264c3.116,1.768 6.505,2.607 9.849,2.607c6.966,0 13.733,-3.645 17.415,-10.136C462.318,370.13 472,333.329 472,295.999C472,238.303 449.532,184.061 408.735,143.264z"/>
 </vector>
