--- a/app/src/main/res/drawable/ic_add_white.xml
+++ b/app/src/main/res/drawable/ic_add_white.xml
@@ -1,5 +1,4 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M492,236H276V20c0,-11.046 -8.954,-20 -20,-20c-11.046,0 -20,8.954 -20,20v216H20c-11.046,0 -20,8.954 -20,20s8.954,20 20,20h216v216c0,11.046 8.954,20 20,20s20,-8.954 20,-20V276h216c11.046,0 20,-8.954 20,-20C512,244.954 503.046,236 492,236z"/>
 </vector>
