--- a/app/src/main/res/drawable/ic_info_white.xml
+++ b/app/src/main/res/drawable/ic_info_white.xml
@@ -1,6 +1,6 @@
-<vector android:height="24dp" android:viewportHeight="65"
-    android:viewportWidth="65" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M32.5,0C14.58,0 0,14.579 0,32.5S14.58,65 32.5,65S65,50.421 65,32.5S50.42,0 32.5,0zM32.5,61C16.785,61 4,48.215 4,32.5S16.785,4 32.5,4S61,16.785 61,32.5S48.215,61 32.5,61z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M33.018,19.541m-3.345,0a3.345,3.345 0,1 1,6.69 0a3.345,3.345 0,1 1,-6.69 0"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M32.137,28.342c-1.104,0 -2,0.896 -2,2v17c0,1.104 0.896,2 2,2s2,-0.896 2,-2v-17C34.137,29.237 33.241,28.342 32.137,28.342z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M256,127m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M437.02,74.98C388.667,26.629 324.38,0 256,0S123.333,26.629 74.98,74.98C26.629,123.333 0,187.62 0,256s26.629,132.667 74.98,181.02C123.333,485.371 187.62,512 256,512c46.813,0 92.618,-12.758 132.461,-36.893c9.448,-5.724 12.467,-18.022 6.744,-27.469c-5.723,-9.448 -18.021,-12.467 -27.468,-6.744C334.144,461.244 295.506,472 256,472c-119.103,0 -216,-96.897 -216,-216S136.897,40 256,40s216,96.897 216,216c0,42.589 -12.665,84.044 -36.627,119.884c-6.139,9.182 -3.672,21.603 5.511,27.742c9.183,6.138 21.603,3.673 27.742,-5.51C497.001,355.674 512,306.53 512,256C512,187.62 485.371,123.333 437.02,74.98z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M256,187c-11.046,0 -20,8.954 -20,20v178c0,11.046 8.954,20 20,20s20,-8.954 20,-20V207C276,195.954 267.046,187 256,187z"/>
 </vector>
