--- a/app/src/main/res/drawable/ic_status_non_check_white.xml
+++ b/app/src/main/res/drawable/ic_status_non_check_white.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="134.565">
 
     <path
-        android:fillColor="#ffffff"
+        android:fillColor="#000000"
         android:pathData="M67.283,0c-36.96,0-67.2,30.277-67.2,67.283s30.24,67.283,67.2,67.283s67.2-30.277,67.2-67.283S104.243,0,67.283,0z M67.283,126.155c-32.34,0-58.8-26.493-58.8-58.872S34.943,8.41,67.283,8.41s58.8,26.493,58.8,58.872 S99.623,126.155,67.283,126.155z" />
 
 </vector>
