--- a/app/src/main/res/layout/item_task_notification.xml
+++ b/app/src/main/res/layout/item_task_notification.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_weight="1"
         android:maxLines="2"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/black"
         android:textSize="14sp"
         tools:text="Hello" />
 
