--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notificationBg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,20 +12,19 @@
         android:id="@+id/bellIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:scaleType="centerInside"
-        android:layout_marginTop="16dp"
-        app:srcCompat="@drawable/ic_app_icon_white"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="centerInside" />
 
     <LinearLayout
         android:id="@+id/containerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -37,22 +36,24 @@
             <TextView
                 android:id="@+id/titleView"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                tools:text="Group Name"
-                android:textStyle="bold"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Group Name" />
 
             <ImageView
                 android:id="@+id/closeIcon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:scaleType="centerInside"
+                android:layout_marginStart="16dp"
                 android:padding="4dp"
-                app:srcCompat="@drawable/ic_cancel"
-                android:layout_marginStart="16dp" />
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/ic_cancel" />
 
         </LinearLayout>
 
